# heval

./: .flake8  .pre-commit-config.yaml  .travis.yml  README.md  build.bat  build_osx.sh  heval.desktop  pyproject.toml  setup.py
.github/workflows/: python-release.yml  python-unittest.yml
docs/: index.html  main.py  pyscript.json
heval/: __init__.py  __main__.py  abg.py  common.py  drugs.py  electrolytes.py  flags.py  human.py  main.py  nutrition.py
tests/: test_doctest.py
