[project]
name = "heval"
dynamic = ["version"]
description = "Medical calculator for intensive care unit"
readme = "README.md"
requires-python = ">=3.8.10"
license = {file = "LICENSE"}
authors = [
    { name = "Eugene Dvoretsky", email = "radioxoma@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.dynamic]
version = {attr = "heval.__version__"}

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.14.7",
]
gui = ["tkinterweb>=4.0.3",]

[project.urls]
homepage = "https://github.com/radioxoma/heval"

[project.gui-scripts]
heval = "heval.__main__:main"
