[project]
name = "heval"
dynamic = ["version"]
description = "Medical calculator for intensive care unit"
readme = "README.md"
requires-python = ">=3.8.10"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Eugene Dvoretsky", email = "radioxoma@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.dynamic]
version = {attr = "heval.__version__"}

[project.optional-dependencies]
gui = ["tkinterweb==4.25.0",]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pdoc>=16.0.0",
    "ruff>=0.15.10",
    "ty>=0.0.26",
]

[project.urls]
homepage = "https://github.com/radioxoma/heval"

[project.gui-scripts]
heval = "heval.__main__:main"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "D",
#    "DOC",
    "RUF",
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "E501",
    "RUF001",
    "RUF002",
    "RUF003",
    "UP032",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
